--- a/carrito.html
+++ b/carrito.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="./css/comun.css" />
     <link rel="stylesheet" type="text/css" href="./css/carrito.css" />
+    <script type="text/javascript" src="js/carrito.js" defer></script>
     <!--Adjuntar aquí el resto de archivos css y js-->
 </head>
 <body>
@@ -25,7 +26,7 @@
                 <div id="carrito-productos" class="carrito-productos">
                     <!--
                     <div class="carrito-producto">
-                        <img class="carrito-producto-imagen" src="./img/portatil/01.jpg" alt="Imagen producto">
+                        <img class="carrito-producto-imagen" src="./img/portatiles/01.jpg" alt="Imagen producto">
                         <div class="carrito-producto-titulo">
                             <small>Título</small>
                             <h3>Portatil 01</h3>
@@ -42,9 +43,15 @@
                             <small>Subtotal</small>
                             <p>$1000</p>
                         </div>
-                        <button class="carrito-producto-eliminar"><i class="bi bi-trash-fill"></i></button>
+                        <div class="carrito-producto-comprar">
+                            <button>Comprar</button>
+                        </div>
+                        <div class="carrito-producto-eliminar">
+                            <button id ="portatil-01">Eliminar</button>
+                        </div>
                     </div>
 
+                    
                     <div id="carrito-acciones" class="carrito-acciones">
                         <div class="carrito-acciones-izquierda">
                             <button class="carrito-acciones-vaciar">Vaciar carrito</button>
@@ -61,6 +68,19 @@
                     -->
                 </div>
                 <p id="carrito-comprado" class="carrito-comprado">Muchas gracias por tu compra. <i class="bi bi-emoji-laughing"></i></p>
+                <div id="carrito-acciones" class="carrito-acciones">
+                    <div class="carrito-acciones-izquierda">
+                        <button class="carrito-acciones-vaciar">Vaciar carrito</button>
+                    </div>
+
+                    <div class="carrito-acciones-derecha">
+                        <div class="carrito-acciones-total">
+                            <p>Total:</p>
+                            <p id="Total">$3000</p>
+                        </div>
+                        <button class="carrito-acciones-comprar">Comprar ahora</button>
+                    </div>
+                </div>
             </div>
         </main>
         <aside class="aside-visible">
