--- a/carrito.html
+++ b/carrito.html
@@ -66,6 +66,56 @@
                         </div>
                     </div>
                     -->
+                    <div class="carrito-producto">
+                        <img class="carrito-producto-imagen" src="./img/portatiles/01.jpg" alt="Imagen producto">
+                        <div class="carrito-producto-titulo">
+                            <small>Título</small>
+                            <h3>Portatil 01</h3>
+                        </div>
+                        <div class="carrito-producto-cantidad">
+                            <small>Cantidad</small>
+                            <p>1</p>
+                        </div>
+                        <div class="carrito-producto-precio">
+                            <small>Precio</small>
+                            <p>$1000</p>
+                        </div>
+                        <div class="carrito-producto-subtotal">
+                            <small>Subtotal</small>
+                            <p>$1000</p>
+                        </div>
+                        <div class="carrito-producto-comprar">
+                            <button>Comprar</button>
+                        </div>
+                        <div class="carrito-producto-eliminar">
+                            <button id ="portatil-01">Eliminar</button>
+                        </div>
+                    </div>
+                    <div class="carrito-producto">
+                        <img class="carrito-producto-imagen" src="./img/portatiles/01.jpg" alt="Imagen producto">
+                        <div class="carrito-producto-titulo">
+                            <small>Título</small>
+                            <h3>Portatil 01</h3>
+                        </div>
+                        <div class="carrito-producto-cantidad">
+                            <small>Cantidad</small>
+                            <p>1</p>
+                        </div>
+                        <div class="carrito-producto-precio">
+                            <small>Precio</small>
+                            <p>$1000</p>
+                        </div>
+                        <div class="carrito-producto-subtotal">
+                            <small>Subtotal</small>
+                            <p>$1000</p>
+                        </div>
+                        <div class="carrito-producto-comprar">
+                            <button>Comprar</button>
+                        </div>
+                        <div class="carrito-producto-eliminar">
+                            <button id ="portatil-01">Eliminar</button>
+                        </div>
+                    </div>
                 </div>
                 <p id="carrito-comprado" class="carrito-comprado">Muchas gracias por tu compra. <i class="bi bi-emoji-laughing"></i></p>
                 <div id="carrito-acciones" class="carrito-acciones">
